// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wuxiaworld — live snapshots > search: A Will Eternal 1`] = `
[
  {
    "author": null,
    "content_type": "novel",
    "cover_url": "https://cdn.wuxiaworld.com/images/covers/awe.webp?v=0c91b8d904130c510296a6925f31839982040557",
    "description": "A Will Eternal is the fourth major xianxia novel by the renowned Er Gen. It tells the tale of Bai Xiaochun, an endearing but exasperating young man who is driven primarily by his fear of death and desire to live forever, but who deeply values friendship and family. The story takes place in the same Universe as Er Gen&#39;s other novels, but is a separate story and can be read alone. That said, it does have connections to the other novels, especially I Shall Seal the Heavens. Those connections only pertain to a handful of chapters, so you can read the novel as a whole and enjoy it without first reading ISSTH. However, the best reading experience would begin with the later portions of ISSTH. This novel is much more comedic and light-hearted than Er Gen&#39;s previous works, although it has its fair share of action and drama.&nbsp;For a more detailed introduction, check out this video by the translator himself!",
    "id": "a-will-eternal",
    "status": "completed",
    "tags": "Chinese, Completed, Action, Alchemy, Comedy, Fantasy, Political Intrigue, Xianxia",
    "title": "A Will Eternal",
    "year": null,
  },
]
`;

exports[`wuxiaworld — live snapshots > search: A Will Eternal 2`] = `
[
  {
    "number": 1,
    "source_id": "a-will-eternal/awe-art-gallery",
    "title": "Art Gallery for A Will Eternal",
    "volume": null,
  },
]
`;

exports[`wuxiaworld — live snapshots > search: A Will Eternal 3`] = `
"The following are all "official" images released by Er Gen. Please note that these images **_DO CONTAIN SPOILERS_** for anyone not currently up to the most recent live chapters!

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/zy42phpv.ywk.jpg)

An early promotional image before the novel was even launched, depicting Bai Xiaochun

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/vrbuqb5u.1s4.jpg)

Promotional splash image used later on, I think on Qidian and also on Er Gen's official WeChat

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/1fydgmwp.ydc.jpg)

Original official novel cover art as used on Qidian for the first few hundred chapters

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/xilqtc2t.rm3.jpg)Second official novel cover adopted a few hundred chapters in, and used until the end of the novel.

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/kccff2jd.2km.jpg)

Depiction of Hou Xiaomei, released on Er Gen's official WeChat

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/mtzr4cur.en2.jpg)

Depiction of Zhou Xinqi, released on Er Gen's official WeChat

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/jhsyk0jb.mvc.jpg)

Depiction of Du Lingfei, released on Er Gen's official WeChat

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/ipdhaxwe.ugw.jpg)

Depiction of Song Que, released on Er Gen's official WeChat

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/cpfjwa2i.l2q.png)

Depiction of Zhou Zimo, Mistress Red-Dust, released on Er Gen's official WeChat

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/ia5vgdkh.xs5.JPG)Depiction of Bai Hao becoming Bai Xiaochun's apprentice, released on Er Gen's official WeChat 

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/a51jw0hu.t3h.jpg)Depiction of Gongsun Wan'er a.k.a. Ghostmother, released on Er Gen's official WeChat 

  

**Below is art commissioned by Deathblade, originally released as gifts to sponsors. Organized alphabetically.**

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/ezqpqipa.052.jpg)Bai Xiaochun and Zhao Tianjiao

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/znnr3gfk.tps.jpg)Blood Ancestor versus Dire Skybanyan

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/iuglexll.icr.jpg)Book 1 Cast

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/ct4nf2a4.joj.jpg)Bruiser version 1

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/q2yau5wz.gpb.jpg)Bruiser version 2

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/l4hpylrd.xej.png)Bai Xiaochun parts with Song Junwan

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/4ycwohfl.m5j.jpg)Demi-Immortals

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/uycpgwnv.jdj.jpg)Fallen Sword World

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/y2z2jomf.qzq.jpg)Mistress Red-Dust (fierce)

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/tp0dqmvd.omb.jpg)Mistress Red-Dust (sexy)

  

![](https://cdn.wuxiaworld.com/uploads/deathblade/a-will-eternal/images/pmor0zwa.l2q.jpg)Spirit Stream Sect

  

  

[](//Qidian.com)"
`;

exports[`wuxiaworld — live snapshots > search: I Shall Seal the Heavens 1`] = `
[
  {
    "author": null,
    "content_type": "novel",
    "cover_url": "https://cdn.wuxiaworld.com/images/covers/issth.webp?v=1b3d8e01982e64b2238156f83551f22e540fe24a",
    "description": "I Shall Seal the Heavens is the story of the young scholar Meng Hao, who gets forcibly recruited into a sect of immortal cultivators. In the cultivation world, the strong prey on the weak, and the law of the jungle prevails. Meng Hao must adapt to survive. Filled with both comedy and drama, I Shall Seal the Heavens remains one of the most beloved xianxia stories ever translated. What does it mean to &ldquo;Seal the Heavens?&rdquo; This is a secret that you will have to uncover along with Meng Hao!",
    "id": "i-shall-seal-the-heavens",
    "status": "completed",
    "tags": "Chinese, Completed, Action, Alchemy, Comedy, Romance, Tragedy, Xianxia",
    "title": "I Shall Seal the Heavens",
    "year": null,
  },
]
`;

exports[`wuxiaworld — live snapshots > search: I Shall Seal the Heavens 2`] = `
[
  {
    "number": 1,
    "source_id": "i-shall-seal-the-heavens/issth-book-1-chapter-1",
    "title": "Chapter 1: Scholar Meng Hao",
    "volume": null,
  },
]
`;

exports[`wuxiaworld — live snapshots > search: I Shall Seal the Heavens 3`] = `
"**Chapter 1: Scholar Meng Hao**

The State of Zhao was a very small nation \\[1. The State of Zhao is named after the historical [State of Zhao](https://en.wikipedia.org/wiki/Zhao_%28state%29)\\]. Like other small nations in the lands of South Heaven, its people admired the Great Tang \\[2. The Great Tang is named after the historical [Tang Dynasty](https://en.wikipedia.org/wiki/Tang_dynasty)\\] in the Eastern Lands, and they admired Chang’an \\[3. Chang'an is named after the historical Chinese city [Chang'an](https://en.wikipedia.org/wiki/Chang%27an)\\]. Not only did the king carry this admiration, all scholars in the State of Zhao did. They could see it, almost as if they stood atop the Tower of Tang in the capital city, oh so far away.

This April was neither extremely cold, nor scorching hot. Light winds caressed the land, passing the Qiang Di flutes of the Northern Reaches, blowing over the lands of the Great Tang. Under the twilight sky, it lifted the fog-like dust, then swirling, twisting, reached Mount Daqing in the State of Zhao. Then it fell onto a young man who sat there on the mountaintop.

He was a lean young man, holding a bottle gourd and wearing a clean blue scholar’s robe. He appeared to be about sixteen or seventeen. He was not tall, and his skin was somewhat dark, but his bright eyes sparkled with intelligence. And yet, all his intelligence seemed to be hidden by the frown on his face. He seemed lost.

“Failed again…” He sighed. His name was Meng Hao, an average student from Yunjie County, which lay at the foot of the mountain \\[4. Meng Hao's name in Chinese is 孟浩 (mèng hào) - Meng is a family name. Hao means “great” or “many”\\]. Years ago, his parents went missing, and did not leave much behind in the way of assets. Education was expensive, so he was almost completely broke.

“I’ve taken the [Imperial exams](https://en.wikipedia.org/wiki/Imperial_examination_in_Chinese_mythology) three years in a row. In all that time, I read books written by the sages until I wanted to throw up. Maybe that isn’t the path for me after all.” Filled with self-deprecation, he looked down at the gourd bottle, his eyes bleak.

“My dream of becoming an official and getting rich just keeps getting farther and farther away. I might as well forget about trying to reach the Great Tang… How useless to be a student.” He laughed bitterly. Sitting there on the silent mountaintop, gazing at the bottle gourd in his hand, he looked increasingly lost. He began to feel fear. What would he do in the future? Where would he go?

Perhaps a high-ranking official would take an interest in him, or a beautiful young maiden. Or would he continue to take the exams, year after year?

There were no answers to the questions. He was but a teenager, and this feeling of being lost had devoured him like a giant invisible mouth. He truly felt afraid.

“Even the teachers in town can only make a few pieces of silver. That’s worse than Uncle Wang’s carpenter shop. If I’d realized that earlier, I could have learned some carpentry skills from him. At least then I wouldn’t be starving like I am now.” He grew silent for a while.

“I don’t have much food or money left at home. I owe Steward Zhou three pieces of silver. What am I going to do?” He raised his head and looked up at the sky, blue and grand. It was so large you could not see its ends. Much similar to how he could not see his future.

After a while, Meng Hao shook his head and took out a slip of paper from his robe. He read it carefully, placed it in the gourd bottle, then stood up and threw the gourd down the mountain.

At the bottom of the mountain was a wide river which never froze during the winter, and was said to flow all the way to the Great Tang.

Meng Hao stood on top of the mountain, watching the gourd bottle drift further and further along down the river. He stared unblinking. For a moment, he seemed to have glimpsed his mother, and the happiness of his childhood. The gourd carried his dreams, his wishes, and his hopes for the future. Perhaps one day someone would pick it up, open it, and read the note.

“Regardless of what I do, be it study or work, I will keep on living.” This was his personality: intelligent and determined. If he wasn’t this way, he would not have been able to survive after his parents left.

He raised his head toward the sky, the stubborn look in his eyes growing deeper. He was about to head down the mountain.

At that exact moment, he heard a weak voice coming from a nearby cliff. The sound seemed to be borne along by the wind. As it passed Meng Hao’s ears, it was almost too faint to notice.

”Help… help…”

Meng Hao stopped for a moment, shocked, then listened carefully. As he concentrated, the sound of the voice calling for help grew stronger.

“Help…”

He walked a few steps forward until he had nearly reached the edge of the peak. When he peered over the edge, he saw a person, his body sticking out of a crevice halfway down the cliff. Pale face full of fear and desperation, he cried for help.

“You… you're Meng Hao, right? Help, Scholar Meng! Help me!” It was a teenager. As soon as he saw Meng Hao, he expressed surprise and happiness, having suddenly found hope in a desperate situation.

“Wang Youcai \\[5. Wang Youcai's name in Chinese is 王有才 (wáng yǒu cái) – Wang is a common family name. Youcai means “to have talent or ability”\\]?” Meng Hao’s eyes grew wide as he looked at the young man. He was the son of Uncle Wang, who owned the carpentry shop in town. “How did you end up here?”

Meng Hao looked at the crevice. The cliff itself was quite steep, and it seemed impossible to climb down. The slightest carelessness would send the climber falling into the river.

Considering how fast the river flowed, if you fell in, the chances of dying were about ninety percent.

“It’s not just me, there are other people from nearby towns,” Wang Youcai gushed. “We’re all stuck here. Brother Meng, let’s not chat, please, just help us get out.” Perhaps he had been hanging out of the crack for too long. His hands grasped at the air, and if not for his compatriots, who grabbed him by the shirt, he would have slipped and fallen down the cliff. His face turned pale with fear.

Meng Hao realized the danger. But he had climbed the mountain alone today, and had no rope. How could he save anyone? At that moment, he turned and realized that the mountainside was covered with rattan vines.

As frail as he was, it took him two hours to find a rattan vine that was long enough. Breathing heavily, he dragged the rattan to the cliff. Calling out Wang’s name, he bent over and lowered the rattan down the cliff.

“You still haven’t told me how you got down there,” Meng Hao said as he lowered the vine.

“By flying!” It was not Wang Youcai who spoke the words, but another young man who stuck his body out of the crevice next to him. This boy looked feisty and intelligent, and spoke with a loud voice.

“Bullshit! You can fly?” mocked Meng Hao, pulling the rattan vine back up a bit. “If you can fly down here, then why don’t you fly back up?”

“Don’t listen to his nonsense,” said Wang Youcai, clearly worried that Meng Hao wouldn’t lower the rattan vine back down. “We were captured by a flying woman. She said she's going to take us to some Sect to be servants.”

“More bullshit?” said Meng Hao dismissively. “Only [Immortals](https://en.wikipedia.org/wiki/Xian_\\(Taoism\\)) from legends can do that. Who believes in that?” In books he had read, there were stories of people who became rich after meeting Immortals, but it was all just lies.

Just as the rattan reached the crevice, Wang caught it. But then, Meng Hao suddenly felt a cold wind behind his back. From the temperature around him, it seemed winter had returned. He shivered. He slowly turned to look back, then screamed and stepped forward into emptiness, beginning to fall off the cliff.

He had seen a woman in a long silver robe and pale face, standing there staring at him. It was impossible to tell her age. She was extremely beautiful, but radiated a coldness that made one feel as if she had just crawled out of a grave.

“Sometimes when you find certain things with certain qualities, it’s just fate.”

When the voice hit his ears, it felt like bones rubbing together. This woman seemed to possess some sort of strange power, and when Meng Hao looked into her eyes, his whole body felt ice cold, as if she could see through him. As if he could hide nothing from her.

Her words still floating through the air, she shook her wide sleeve, and suddenly, a gust of greenish wind picked up Meng Hao. He flew down the cliff with her. His mind went blank.

When they reached the crevice, the woman waved her hand and threw him inside. As for her, she stopped moving, as did the greenish wind. Wang and his three friends scurried backward in fright.

The woman stood there, not saying a word. She raised her head and glanced at the rattan vine.

Meng Hao was so nervous he had started shaking. He stood up, glancing around quickly. The crevice was not spacious, and was in fact quite narrow. Even with only a few people inside, there was not much room.

His eyes fell on Wang and the two other young men. One was the clever fellow; the other one was clean and pudgy. The two of them shivered, looking as if they might cry from fear at any moment.

“I was short one person,” said the pale-faced woman. Now she looked at Meng Hao instead of the rattan. “I'll put you in with them.”

“Who are you?” asked Meng Hao, concealing his fear. He was an educated person and had a strong personality. Despite being afraid, he controlled himself and did not panic.

The woman said nothing. She raised her right hand and waved, and the green wind appeared again. It lifted up all the young men, and they flew out of the cave together with the woman, shooting up into the sky. They disappeared. Left behind was only Mount Daqing. It stood there, straight and tall, merging in the darkness of twilight.

The blood drained from Meng Hao’s face. He saw himself within the green wind, crossing the sky. As he flew above the ground, wind blew into his mouth, making it impossible to breathe. A word appeared in his head.

“Immortals?” He held his breath for the amount of time it would normally take to breathe ten times, until he couldn’t hold on any more. Then he passed out.

When he opened his eyes, he found that they had landed on a platform paved with green stone, halfway up a mountain. More rolling mountains surrounded them. Clouds and fog drifted about; this was definitely not the mortal world. The beautiful peaks of the surrounding mountains looked very strange.

Wang and the other young men woke up, scared and shivering. They stared at the back of the woman.

Standing in front of her were two Cultivators wearing long green robes. They appeared to be in their twenties. They had sunken eyes with fear-inspiring green pupils.

“Excellent work, Elder Sister Xu,” said one of the men, his voice flattering. “You found four talented young babies.”

“Take them to the Servants’ Quarter,” said the woman, her face cold, not even looking at Meng Hao and the others. Suddenly, her entire body transformed. She became a rainbow and then disappeared into the mountains.

By this time, Meng Hao had recovered his composure. He stared, numb, at the place where the woman had disappeared. An expression appeared on his face which had not appeared there for sixteen years. His blood boiled.

“Servants?” he thought. “If the work is for Immortals, the pay must be good.” Now that he knew the people didn’t want to kill them, he took a step forward.

“Sister Xu has reached the seventh level of Qi Condensation,” lamented the second of the Cultivators. “The Sect Priest bestowed a Wind Pennant upon her, which means even though she isn't at the Foundation Establishment stage, she can still fly.” He looked arrogantly down at Meng Hao and the others.

“You and you,” he said pointing at Wang and the clever young man. “Follow me to the Southern Servants’ Quarters.”

“What is this place?” Wang asked, his voice and body both shaking as the Immortal pointed at him.

“The Reliance Sect.”

  

  

> Deathblade's Thoughts
> 
> New to Chinese fantasy genres like wuxia and xianxia? Or are you a longtime fan who would like more insight into the language and cultural elements? Check out my reference book [_Understanding Chinese Fantasy Genres_](https://www.amazon.com/gp/product/B08NP119NH/ref=dbs_a_def_rwt_hsch_vapi_tkin_p1_i0), which will give you a great foundation to enjoy these awesome stories. 
> 
> [And here's a link to my website, with more info about me including links to all my social media](https://jeremybai.com/about-me).
> 
> Also, what exactly is a scholar in a Chinese fantasy novel? [Find out the answer HERE!](https://youtu.be/Hlo5wD4RTN4)"
`;

exports[`wuxiaworld — live snapshots > search: Renegade Immortal 1`] = `
[
  {
    "author": null,
    "content_type": "novel",
    "cover_url": "https://cdn.wuxiaworld.com/images/covers/rge.webp?v=f264adaaecabc7ba05c33497868dac78e3a37c63",
    "description": "Renegade Immortal / Xian Ni (仙逆) &ndash; Wang Lin is a very smart boy with loving parents. Although he and his parents are shunned by the rest of their relatives, his parents have always held high hopes that he will one day become someone great. One day, Wang Lin suddenly gained the chance to walk the path of an immortal but found that he only had mediocre talent at best. Watch Wang Lin as he breaks through his lack of talent and walks the path towards becoming a real immortal!",
    "id": "renegade-immortal",
    "status": "completed",
    "tags": "Chinese, Completed, Action, Fantasy, Tragedy, Xianxia",
    "title": "Renegade Immortal",
    "year": null,
  },
]
`;

exports[`wuxiaworld — live snapshots > search: Renegade Immortal 2`] = `
[
  {
    "number": 1,
    "source_id": "renegade-immortal/rge-chapter-1",
    "title": "Chapter 1 – Leaving Home",
    "volume": null,
  },
]
`;

exports[`wuxiaworld — live snapshots > search: Renegade Immortal 3`] = `
"Chapter 1 - Leaving Home

Tie Zhu sat on the side of a little road in the village, looking at the blue sky in a daze. Tie Zhu was not his real name, but a nickname. Due to his poor health as a child his father was afraid he might not live so he was given this nickname as a tradition.

His real name was Wang Lin. The Wang family was considered a big family name in the area, a family of carpenters. The Wang family was well known in the area, and they owned a number of shops that sold wood products.

Tie Zhu’s father was the second son of the family. He was born from a concubine; therefore, he couldn’t take over the family business, so he left the house after he got married and settled in this village.

However, due to his father being a skilled carpenter, Tie Zhu’s family was pretty well off, not having to worry about food or clothes. They were well respected within the village.

Tie Zhu had been very intelligent ever since he was little. He loved to read books and thought deeply about matters. Almost everyone in the village agreed that he was a prodigy. Every time his father heard someone praise Tie Zhu, the wrinkles on his face would fade and he would reveal a happy smile.

His mother cared for him a lot. One could say that he had grown up in his parents’ love. He knew that his parents had high expectations of him. Other children his age were all working in the fields, while he sat at home reading.

The more he read, the more he thought about. He yearned for the world outside of the village. Tie Zhu raised his head and looked at the end of the road. After letting out a sigh, he closed his book, got up, and walked home.

His father was sitting in the courtyard. Holding a pipe, he took a deep breath and asked, “Tie Zhu, how goes your studies?” as Tie Zhu walked through the door.

Tie Zhu muttered a few words as he passed by. His father shook the ashes out of his pipe, rose up, and said, “Tie Zhu, you have to study properly. Next year is the district exam. Whether you have a future or not will all depend on this exam. Don’t end up like me, who will spend my entire life in a village.”

“Enough, you complain about this every day. If you ask me, our Tie Zhu will definitely pass the exam!” Tie Zhu’s mother carried over some food and set it on the table. She gestured at the two to come and eat.

Tie Zhu responded with a sound, then he sat down and casually ate a few mouthfuls. His mother affectionately looked at him and passed him the few pieces of meat there were.

“Dad, is Fourth Uncle almost here?” Tie Zhu asked as he raised his head.

“Calculating the time, it should be within these next few days. Your fourth uncle is more successful than your father. Hey, Tie Zhu’s mom, have the special dishes prepared for Fourth Uncle all been packed?” The moment Tie Zhu’s father mentioned Fourth Uncle, there was a hint of sadness on his face.

His mom nodded and emotionally said, “Tie Zhu, your fourth uncle is a very good person. In these past few years, it was all thanks to him that your father’s wood carvings have stayed at a good price. If you are able to achieve success, don’t forget to repay your fourth uncle.”

As Tie Zhu’s mom was talking, the sound of a horse was heard outside the door. Following the sound of the horse drawn carriage, a hearty laugh could be heard.

“Second Brother, open the door!”

Tie Zhu was surprised. He immediately rushed to open the main gate. He saw a strong middle-aged man with bright eyes standing outside. When he saw Tie Zhu, he laughed and rubbed Tie Zhu’s head. Smiling, he said, “Tie Zhu, I only haven’t seen you in half a year and you have grown taller again.”

Tie Zhu’s parents immediately stood up. His father, smiling, said, “Fourth Brother, I figured it was about time you arrived. Hurry inside. Tie Zhu, why haven’t you gotten a chair for your fourth uncle yet?”

Tie Zhu happily agreed. He hurried back into the house, took out a chair, and placed it next to the dining table. He carefully wiped it with his sleeves while looking hopefully at the middle-aged man.

The middle-aged man winked in his direction and jokingly said, “Tie Zhu, since when were you so diligent? I remember the last time I was here, you were not like this.”

Tie Zhu’s father glanced at Tie Zhu and said, “This little rascal was just inquiring about when you would arrive.”

The middle-aged man saw Tie Zhu blushing and laughingly said, “Tie Zhu, your fourth uncle hasn’t forgotten his promise to you.” After he finished speaking, he took out two books and placed them on the table.

Tie Zhu excitedly cheered, then flipped through the books. He could barely contain his excitement.

Tie Zhu’s mom kindly glanced at her son and said to the middle-aged man, “Fourth Brother, your older brother is always thinking of you. You should stay for a few more days this time.”

The middle-aged man shook his head and said, “Second Sister-in-Law, there are many matters to attend to in the family these days. I must head home early tomorrow morning. After this busy time, I’ll come back and see you guys.” He gave his second brother a regretful look.

Tie Zhu’s father sighed, saying, “Don’t listen to my wife. Properly pack the goods tomorrow. The family’s matters are more important. We can meet next time.”

The middle-aged man looked at Tie Zhu’s father and asked, “Second Brother, Tie Zhu is 15 years old, yes?”

Tie Zhu’s father nodded and said, “After this year, this little rascal is going to be 16. In a flash, more than 10 years have quickly passed by.” He look at his son dotingly.

The middle-aged man pondered for a while and said, in a serious tone, “Second Brother, Second Sister-in-Law, I have something to tell you: the Heng Yue Sect is taking in disciples. This year, the family has three recommendation slots, and I received one of them.”

Tie Zhu’s father was stunned and said, with a pale face, “Heng Yue Sect? The Heng Yue Sect that is full of immortals?”

The middle-aged man smiled, nodded, and said, “Second Brother, it is that very immortal sect! Our family is still a prominent one in the area and has the qualifications to recommend potential disciples. You know my boy, he can’t really study, but he is good with swords and knives. I doubt the immortal sect will take my son. This spot is really precious. I know Tie Zhu has been very smart since he was little and has always loved to study. He might have a chance.”

Tie Zhu’s mother felt delighted and said, “Fourth Brother, this … this …”

The middle-aged man rubbed Tie Zhu’s head and said, “Second Brother, Second Sister-in-Law, let this matter be settled. Let Tie Zhu try; if he really gets accepted, it is his fortune.”

Tie Zhu confusedly looked at his parents and his fourth uncle. He wasn’t able to understand what was going on. “Immortals? What are immortals?” Tie Zhu softly and hesitantly asked.

The middle-aged man’s face turned serious. Looking at Tie Zhu, he said, “Tie Zhu, immortals are those who can fly in the sky. They are simply not something we mortals can understand.”

Tie Zhu was confused but grew curious of immortals.

Tie Zhu’s father excitedly got up, pulled Tie Zhu’s mom, and was about to bow to the middle-aged man. The middle-aged man quickly pulled them up and sincerely said, “Second Brother, what are you doing? My mother died early. If it wasn’t for Second Brother’s mother taking care of me, I wouldn’t be here today. Tie Zhu is my nephew and this is the least I can do.”

Tie Zhu’s father started crying. He heavily patted the middle-aged man’s back, nodded his head, and sternly said to Tie Zhu, “Remember, Wang Lin, never forget what your fourth uncle has done for us, or else I will not consider you my son!”

Tie Zhu’s heart trembled. Although he was ignorant towards immortals, he could tell from his parents’ expressions that they viewed this matter with great importance. He knelt in front of his fourth uncle and kowtowed a few times.

The middle-aged man pulled up Tie Zhu and praised him. “Good child. You get ready and I’ll pick you up at the end of the month.”

That night, Tie Zhu went to bed early. He could still hear sounds from his father and fourth uncle. Father was very happy. Even though he rarely drank, he had to drink a few cups with Fourth Uncle today.

“Immortals, what were they?” Tie Zhu’s heart was very excited. He knew in his heart that this was an opportunity, an opportunity to see the outside world!

Fourth Uncle left early the next morning. Tie Zhu and his parents saw him off at the village entrance. On the way back, he clearly noticed that his father looked a lot younger. His eyes were filled with hope.

The expectations in his eyes were much greater than the time he wanted Tie Zhu to pass the district exam.

There were no secrets in the village, even if it was how many pups a dog gave birth to. Everyone in the village would hear the news. Soon, everyone in the village heard the news from Tie Zhu’s mother and all the neighbors came in to visit. Everyone’s gazes toward Tie Zhu was different from before. Some were filled envy and others with jealousy.

“The Wang family gave birth a good son. He has been accepted as a disciple of the Heng Yue Sect.”

“I have watched this child, Tie Zhu, as he grew up! He was very smart ever since he was little. Now he is a Heng Yue Sect disciple. He has a very promising future.”

“Tie Zhu, you have great talent! When you are successful in the future, don’t forget to come back and visit.”

These talks filled Tie Zhu’s ears, acting like Tie Zhu was already a Heng Yue Sect disciple. Every time his parents heard it, they couldn’t stop smiling. The wrinkles on their faces had lessened greatly.

Whenever Tie Zhu walked alone in the village, all of the villagers would passionately ask him about this and that. There were even people who told their kids to follow Tie Zhu as an example.

Half a month passed by quickly. The news of Tie Zhu becoming a Heng Yue Sect disciple had spread quickly. All of the nearby villagers had come to see Tie Zhu.

Everyone who came by brought gifts. Tie Zhu’s parents couldn’t reject them, but as they left, Tie’s Zhu’s parents planned return gifts. According to Tie Zhu’s father, “Our son will be an immortal in the future, so he can’t owe any favors. We will prepare return gifts for all the visitors.”

Soon, the Wang family learned that Tie Zhu’s fourth uncle gave his son’s spot to Tie Zhu. One after another, they came to congratulate him.

Tie Zhu’s father attached great importance to the visiting relatives because many of them used to look down on him in the past and drove him out of the family all those years ago. Now that they were all coming to visit him, he felt like his years of sorrow were instantly swept away.

He and Tie Zhu’s mother discussed a bit and decided to properly entertain everyone. They spent a fortune to hire the village teacher to write invitations to send to their relatives.

The village teacher didn’t want money, he wanted Tie Zhu to acknowledge that he grew up studying in his care. Tie Zhu had no objections as this was the truth.

After the invitations were sent to most of the Wang family members, there were so many people that Tie Zhu’s dad had to move the party’s location to the village square and set up a feast.

The villagers helped entertain the guests. As they spoke to each other, they would praise Tie Zhu endlessly.

Tie Zhu’s dad had brought his wife and son to the village entrance to personally greet the guests and introduce each relative to Tie Zhu.

“This is your third grandfather. When Father left the family, your third grandfather secretly helped a lot. Tie Zhu, you have to remember to repay his kindness,” Tie Zhu’s father said as he helped a white-haired old man.

Tie Zhu quickly nodded. The old man looked at Tie Zhu and said, “Second Brother, time passes by so fast. Your son is already this big! His future is already brighter than yours.”

Tie Zhu’s father’s face was full of radiance. He smiled and said, “Third Grandfather, Tie Zhu has been smart ever since he was a kid. He was bound to be better than me. Take your time. Wife, help support Third Grandfather.”

Tie Zhu’s mother quickly helped the old man walk toward the feast.

Seeing the old man leaving, Tie Zhu’s father let out a snort and said to Tie Zhu, “That old guy looked down on your dad and forced me away. Now that you have a good future, he comes to congratulate me. He is just that kind of relative.”

Tie Zhu cluelessly nodded and asked, “Is Fourth Uncle coming?”

Tie Zhu’s father shook his head. “Your fourth uncle sent a letter. He won’t be able to come back until the end of the month.”

At that moment, another carriage arrived at the village entrance. A 50-plus-year-old man came out. He looked at Tie Zhu’s father and said, “Second Brother, congratulations!”

Tie Zhu’s father’s face turned complicated and he said, “Big Brother!”

The old man’s eyes swept across and looked at Tie Zhu. He smiled. “Second Brother, so this is your son? Not bad! Maybe he will really be selected.”

Tie Zhu’s father frowned, stretched, and said, “Tie Zhu might not have much merit, but he is smart and loves to read books. He is bound to be selected.”

“That is not necessarily true. When immortal sects look for disciples, there are very strict requirements. I see that this kid is very dumb. Going will be a waste of time for him,” said a haughty voice from the carriage, then a 16 or 17-year-old boy stepped out.

The young boy looked very pretty. He had eyebrows like scimitars, a face like Guan Yu, and eyes full of disdain.

Tie Zhu’s father glared at him, and Wang Lin gave him a deep look but didn’t say anything.

The old man’s face changed colors and he shouted, “Wang Zhuo, how can you be so rude?! This is your second uncle and your little brother Wang Lin. Why haven’t you greeted them?!” He turned to Tie Zhu’s father and said, “My son’s words are ugly. Second Brother, don’t mind him, but…” As he was talking, he suddenly turned and said, “But Second Brother, it is not a simple matter for these immortals to accept a disciple–it is a matter of fate. This time, it’s because the Heng Yue Sect was very interested in my son that our Wang family was given three spots, including his.”

Tie Zhu’s father snorted and said, “If your son can do it, then my son will definitely be selected!”

The youth laughed, not caring about the old man’s words. With disdain, he said, “So, you are Second Uncle. I suggest you don’t be so optimistic. The way of cultivation is very complex, and only one in ten thousand people can even learn it. How can he compete with me, who, while not being an official disciple yet, was personally selected by an immortal teacher?”

The old man’s face flashed with a color of pride, then he “scolded” the youth and brought him toward the feast.

“Tie Zhu, don’t worry. Even if you are not selected, it doesn’t matter. There is always the district exam next year,” Tie Zhu’s father earnestly said after suppressing his anger.

Wang Lin confidently whispered, “Dad, don’t worry. I’ll be selected!”

Tie Zhu’s dad gently patted his son’s shoulder. His eyes were filled with rays of hope.

One after another, they greeted a lot of relatives. Tie Zhu’s father took him back to the feast. In front of them was a bustling scene of people celebrating.

Tie Zhu’s father cried out, “My dear relatives, my fellow villagers, I, Wang Tianshui, am not a very cultured man and don’t have much to say, but today, I’m very happy because my son has a chance to become a Heng Yue Sect disciple. This is the happiest moment of my life. I won’t say more, but thank you all for coming.” He raised his cup and drained it of the wine within.

“Second Brother, your son has been very smart ever since he was little. He will definitely be selected, like Wang Zhu’s son, and become an immortal.”

“Second Brother, having a son like Tie Zhu means you have not lived your life in vain. In the future, all you have to do is wait to enjoy the good fortune.”

“Tie Zhu, you must make your father proud! You must enter the Heng Yue Sect no matter what!”

There were numerous bright scenes everywhere. The sounds of celebration came from all sides. However, there were many people like Wang Zhuo’s father, who on the surface were giving their congratulations but in their hearts had always looked down upon Tie Zhu’s father and Tie Zhu himself. Wang Zhuo’s father looked at his son, and then at Tie Zhu. He felt very dissatisfied. Fourth Brother’s actions were outside of his expectations, but as the immortals weren’t blind, there was no way Tie Zhu would be selected.

People passed by, one by one. Tie Zhu’s father pulled Tie Zhu around from table to table to give a toast and introduce various unknown relatives to him.

Today, Tie Zhu’s father had consumed a lot of wine. He had never been this well regarded before. The feast lasted until it was very late and everyone started to head home. Before leaving, and still with a look of contempt, Wang Zhuo, while no one noticed, whispered to Tie Zhu, “Little fool, you won’t be selected. You’re not good enough.”

He left with his father as he displayed a smile full of contempt.

After returning home, Tie Zhu lied on his bed. He secretly decided in his heart that he had to be selected no matter what!

Half a month passed by quickly. Today, Tie Zhu’s fourth uncle arrived in a carriage.

Tie Zhu’s parents quickly welcomed him inside. The middle-aged man washed his face and hurriedly said, “Second Brother, Second Sister-in-Law, I can’t stay long this time. I’m taking Tie Zhu and leaving. The Heng Yue Sect will arrive to pick up the potential disciples tomorrow morning.”

Tie Zhu’s father was stunned. A trace of sadness appeared on his face. He firmly said, “Fine. Tie Zhu, follow your fourth uncle. If you are selected, study dutifully at the Heng Yue Sect. However, if you aren’t selected, don’t worry and come back home.”

Tie Zhu, not wanting to leave his parents, nodded heavily. His mother took out a parcel from the room and lovingly said, “Tie Zhu, listen to your fourth uncle and don’t cause any trouble. The outside is not the same as home; you must have patience. Mother has prepared you some new clothes. Also, there are some of your favorite baked sweet potatoes. Mother will miss you. If you are not selected, just come back.” As Tie Zhu’s mom was talking, tears began appearing in her eyes.

Tie Zhu had never left the village in his entire life. This was his first time leaving.

Fourth Uncle emotionally said, “Tie Zhu, you must be selected so you make your parents proud. Second Brother, Second Sister-in-Law, the family will have a big celebration in a few days, so I am too busy today. Tomorrow, I’ll pick you guys up. The results for the three candidates should be out by then.”

He quickly pulled Tie Zhu onto the carriage, whipped the horse, and set off.

With tears in their eyes, Tie Zhu’s parents stared at the carriage as it quickly disappeared into the distance.

“Tie Zhu has never left home before. Will he be bullied?” Tie Zhu’s mom said while biting her lip. Her eyes were filled with sadness.

“He has grown up and has to deal with his own fortune.” Tie Zhu’s father picked up his pipe and inhaled deeply. More wrinkles appeared on his face."
`;

exports[`wuxiaworld — live snapshots > search: The Desolate Era 1`] = `[]`;
